[project]
name = "line-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartesia-line>=0.2.11",
    "pypdf>=6.12.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "agentmail>=0.5.3",
]
